<resources>
    <string name="app_name">My Application</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clock">Clock</string>
    <string name="calculator">Calculator</string>
    <string name="note">Note</string>
    <string name="clock_1">CLOCK</string>
    <string name="calculator_1">CALCULATOR</string>
    <string name="note_1">NOTE</string>
    <string name="CLOCK">CLOCK</string>
    <string name="CALCULATOR">CALCULATOR</string>
    <string name="NOTE">NOTE</string>
    <string name="clr">CLR</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="division">÷</string>
    <string name="closing_bracket">)</string>
    <string name="start_bracket">(</string>
    <string name="x">X</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="backspace"> </string>
    <string name="display_hint">Enter a value</string>

</resources>