<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/constraint_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".calculator">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/six"
            android:layout_width="80dp"
            android:layout_height="70dp"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toBottomOf="@+id/nine" />

        <Button
            android:id="@+id/plus"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintTop_toBottomOf="@+id/minus" />

        <Button
            android:id="@+id/three"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/six" />

        <Button
            android:id="@+id/two"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background"


            android:onClick="onClick"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toStartOf="@+id/three"
            app:layout_constraintTop_toBottomOf="@+id/five" />

        <Button
            android:id="@+id/one"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"

            android:onClick="onClick"

            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four" />

        <Button
            android:id="@+id/minus"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toBottomOf="@+id/multiply" />

        <Button
            android:id="@+id/five"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toBottomOf="@+id/eight" />

        <Button
            android:id="@+id/four"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"

            android:onClick="onClick"

            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/nine"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toBottomOf="@+id/secondBracket" />

        <Button
            android:id="@+id/eight"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toBottomOf="@+id/firstBracket" />

        <Button
            android:id="@+id/division"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/secondBracket"
            app:layout_constraintTop_toBottomOf="@+id/backspace" />

        <Button
            android:id="@+id/secondBracket"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/closing_bracket"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/firstBracket"
            app:layout_constraintTop_toBottomOf="@+id/backspace" />

        <Button
            android:id="@+id/firstBracket"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/start_bracket"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toBottomOf="@+id/backspace" />

        <Button
            android:id="@+id/clear"
            android:layout_width="80dp"
            android:layout_height="70dp"

            android:layout_marginTop="10dp"
            android:background="@drawable/clear_btn_background"
            android:onClick="clearBTNPush"
            android:text="@string/clr"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backspace" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toBottomOf="@+id/division" />

        <Button
            android:id="@+id/seven"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"

            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear" />

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/two"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/one"
            app:layout_constraintTop_toBottomOf="@+id/one"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/dot"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"

            android:layout_marginTop="12dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/two"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/equals"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/equals"

            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toEndOf="@+id/dot"
            app:layout_constraintTop_toBottomOf="@+id/three" />

        <ImageButton
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_height="45dp"

            android:background="@drawable/button_background"
            android:contentDescription="@string/backspace"
            android:onClick="backspaceBTNPush"
            android:textColor="@color/tanAccent"
            app:layout_constraintEnd_toEndOf="@+id/division"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/division"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/previousCalculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:textAlignment="textEnd"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:textSize="48sp"
        android:inputType="textPersonName"
        android:hint="@string/display_hint"
        android:textColorHint="@color/greyAccent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>