<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"



    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tabLayout"


        >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:id="@+id/clock"
                android:layout_height="wrap_content"
                android:text="@string/CLOCK" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"

                android:id="@+id/calculator"
                android:layout_height="wrap_content"
                android:text="@string/CALCULATOR" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/note"
                android:text="@string/NOTE" />
        </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>

